fix: remove styles inline and conflicts

--- a/etc/ansible/playbook.yml
+++ b/etc/ansible/playbook.yml
@@ -5,7 +5,7 @@
     repo_url: https://github.com/decentraland/marketplace.git
     repo_branch: master
     rpc_url: http://localhost:8545
-    new_relic_key: ""
+    new_relic_key: ''
 
   tasks:
     - name: Install Python in target host
@@ -20,7 +20,7 @@
             update_cache: yes
         - name: Upgrade packages
           apt:
-            name: "*"
+            name: '*'
             state: latest
             force_apt_get: true
         - name: Install required packages
@@ -40,13 +40,8 @@
 
     - name: Install nodejs
       block:
-<<<<<<< HEAD
-        - name: Get nodejs package  
-          get_url: 
-=======
         - name: Get nodejs package
           get_url:
->>>>>>> feat: estate flow
             url: https://deb.nodesource.com/setup_8.x
             dest: /tmp/nodesource_setup.sh
         - name: Update apt source
@@ -65,30 +60,27 @@
       block:
         - name: Clone repo
           git:
-            repo: "{{ repo_url }}"
-            dest: "{{ app_location }}"
-            version: "{{ repo_branch }}"
+            repo: '{{ repo_url }}'
+            dest: '{{ app_location }}'
+            version: '{{ repo_branch }}'
             clone: yes
             update: yes
         - name: Install node packages
           shell: npm install
           args:
-            chdir: "{{ app_location }}"
+            chdir: '{{ app_location }}'
 
     - name: Setup app config file
       block:
         - name: Get contract addresses
-<<<<<<< HEAD
-          get_url: 
-=======
           get_url:
->>>>>>> feat: estate flow
             url: https://contracts.decentraland.org/addresses.json
-            dest: "{{ app_location }}/scripts/addresses.json"
+            dest: '{{ app_location }}/scripts/addresses.json'
         - name: Create config file
-          shell: ./build-env.sh "{{ network }}" "{{ connection_string }}" "{{ rpc_url }}" "{{ new_relic_key }}"> ../src/.env
+          shell:
+            ./build-env.sh "{{ network }}" "{{ connection_string }}" "{{ rpc_url }}" "{{ new_relic_key }}"> ../src/.env
           args:
-            chdir: "{{ app_location }}/scripts"
+            chdir: '{{ app_location }}/scripts'
 
     - name: Setup supervisor
       block:
@@ -98,12 +90,12 @@
             state: present
         - name: App config file
           copy:
-            src: "{{ app_location }}/etc/supervisor/mkt-app.conf"
+            src: '{{ app_location }}/etc/supervisor/mkt-app.conf'
             dest: /etc/supervisor/conf.d
             remote_src: yes
         - name: Monitor config file
           copy:
-            src: "{{ app_location }}/etc/supervisor/mkt-monitor.conf"
+            src: '{{ app_location }}/etc/supervisor/mkt-monitor.conf'
             dest: /etc/supervisor/conf.d
             remote_src: yes
         - name: Reload app
