feat: estate sanity check and abstractions

--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "init-db": "./scripts/initDb.js",
     "migrate": "./migrations/migrate",
     "renew-blockchain-data": "./scripts/renewBlockchainData.js",
-    "sanity-check": "./scripts/sanityCheck.js run",
     "seed": "./scripts/seed.js",
     "translate": "./scripts/translate.js && prettier ./src/Translation/locales/*.json --write",
     "tag": "./scripts/tag.js",
     "monitor-blockchain": "./monitor/program.js index",
+    "sanity-check": "./sanity/program.js run",
     "cli": "./scripts/mktcli.js",
     "build": "npm run lint && npm run test",
     "build:ci": "npm run migrate up && npm run build",
