--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -24,6 +24,7 @@ REACT_APP_SEGMENT_API_KEY=
 
 REACT_APP_FF_MORTGAGES=
 REACT_APP_FF_BUY_MANA=
+REACT_APP_FF_MARKETPLACEV2=
 
 REACT_APP_BLACKLISTED_ADDRESSES=
 
