feat: remove isFeatureEnabled for estates (#472)
* feat: remove isFeatureEnabled for estates

* chore: remove env example flag

* feat: add MARKETPLACE2 flag

--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -23,8 +23,8 @@ REACT_APP_INTERCOM_APP_ID=
 REACT_APP_SEGMENT_API_KEY=
 
 REACT_APP_FF_MORTGAGES=
-REACT_APP_FF_ESTATES=
 REACT_APP_FF_BUY_MANA=
+REACT_APP_FF_MARKETPLACEV2=
 
 REACT_APP_BLACKLISTED_ADDRESSES=
 
