--- a/webapp/package.json
+++ b/webapp/package.json
@@ -32,6 +32,7 @@
     "css-loader": "0.28.7",
     "date-fns": "^1.29.0",
     "decentraland-commons": "^4.0.1",
+    "decentraland-dapps": "^1.1.1",
     "decentraland-eth": "^4.3.0",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
