fix: actually kill the process

--- a/etc/supervisor/mkt-monitor.conf
+++ b/etc/supervisor/mkt-monitor.conf
@@ -6,6 +6,8 @@ autostart=true
 autorestart=true
 environment=NODE_ENV="production"
 directory=/home/ubuntu/app
-stderr_logfile=/var/log/app-monitor.err.log
-stdout_logfile=/var/log/app-monitor.out.log
+stderr_logfile=/var/log/monitor.err.log
+stdout_logfile=/var/log/monitor.out.log
 user=ubuntu
+stopasgroup=true
+stopsignal=KILL
