--- a/webapp/package.json
+++ b/webapp/package.json
@@ -29,8 +29,9 @@
     "css-loader": "0.28.7",
     "date-fns": "^1.29.0",
     "decentraland-commons": "^4.0.1",
-    "decentraland-dapps": "^3.2.0",
-    "decentraland-eth": "^4.3.0",
+    "decentraland-dapps": "^3.2.1",
+    "decentraland-eth": "^6.0.0",
+    "decentraland-ui": "^1.10.0",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
