--- a/webapp/package.json
+++ b/webapp/package.json
@@ -29,7 +29,7 @@
     "css-loader": "0.28.7",
     "date-fns": "^1.29.0",
     "decentraland-commons": "^4.0.1",
-    "decentraland-dapps": "^3.2.1",
+    "decentraland-dapps": "^3.3.1-rc1",
     "decentraland-eth": "^6.0.0",
     "decentraland-ui": "^1.10.0",
     "dotenv": "4.0.0",
@@ -62,6 +62,7 @@
     "query-string": "^5.1.0",
     "raf": "3.4.0",
     "react": "16.2.0",
+    "react-circular-progressbar": "^1.0.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "16.2.0",
     "react-redux": "^5.0.6",
