--- a/webapp/package.json
+++ b/webapp/package.json
@@ -29,7 +29,7 @@
     "css-loader": "0.28.7",
     "date-fns": "^1.29.0",
     "decentraland-commons": "^4.0.1",
-    "decentraland-dapps": "^3.3.1-rc1",
+    "decentraland-dapps": "^3.3.1",
     "decentraland-eth": "^6.0.0",
     "decentraland-ui": "^1.10.0",
     "dotenv": "4.0.0",
