--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -23,9 +23,9 @@ REACT_APP_ROLLBAR_ACCESS_TOKEN=
 REACT_APP_INTERCOM_APP_ID=
 REACT_APP_SEGMENT_API_KEY=
 
+REACT_APP_FF_AUCTION=
 REACT_APP_FF_MORTGAGES=
 REACT_APP_FF_BUY_MANA=
-REACT_APP_FF_MARKETPLACEV2=
 
 REACT_APP_BLACKLISTED_ADDRESSES=
 
