--- a/src/.env.example
+++ b/src/.env.example
@@ -1,20 +1,28 @@
 NODE_ENV=
 
 SERVER_PORT=
+CONNECTION_STRING=
 TRANSLATIONS_PATH=
 
-CONNECTION_STRING=
-
+RPC_URL=
 PROCESS_EVENTS_DELAY=
 
-RPC_URL=
+# Contract addresses
 
-NEW_RELIC_LICENSE_KEY=
+MANA_TOKEN_CONTRACT_ADDRESS=
 
-LAND_REGISTRY_CONTRACT_ADDRESS=
 LEGACY_MARKETPLACE_CONTRACT_ADDRESS=
+LAND_REGISTRY_CONTRACT_ADDRESS=
+
+ESTATE_REGISTRY_CONTRACT_ADDRESS=
 MARKETPLACE_CONTRACT_ADDRESS=
+
+LAND_AUCTION_CONTRACT_ADDRESS=
+
 MORTGAGE_HELPER_CONTRACT_ADDRESS=
 MORTGAGE_MANAGER_CONTRACT_ADDRESS=
 RCN_ENGINE_CONTRACT_ADDRESS=
-ESTATE_REGISTRY_CONTRACT_ADDRESS=
+
+# Third party
+
+NEW_RELIC_LICENSE_KEY=
