--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -1,32 +1,41 @@
 NODE_PATH=
 NODE_ENV=
 
+REACT_APP_VERSION=
+REACT_APP_API_URL=
+REACT_APP_MORTGAGES_API=
+
 REACT_APP_PROVIDER_URL=
 
-REACT_APP_API_URL=
-REACT_APP_VERSION=
-
+REACT_APP_BLACKLISTED_ADDRESSES=
 REACT_APP_LOCAL_STORAGE_KEY=
 
+# Contract addresses
+
 REACT_APP_MANA_TOKEN_CONTRACT_ADDRESS=
-REACT_APP_LAND_REGISTRY_CONTRACT_ADDRESS=
+
 REACT_APP_LEGACY_MARKETPLACE_CONTRACT_ADDRESS=
 REACT_APP_MARKETPLACE_CONTRACT_ADDRESS=
+
+REACT_APP_LAND_REGISTRY_CONTRACT_ADDRESS=
+REACT_APP_ESTATE_REGISTRY_CONTRACT_ADDRESS=
+
+REACT_APP_LAND_AUCTION_CONTRACT_ADDRESS=
+
 REACT_APP_MORTGAGE_HELPER_CONTRACT_ADDRESS=
 REACT_APP_MORTGAGE_MANAGER_CONTRACT_ADDRESS=
 REACT_APP_RCN_ENGINE_CONTRACT_ADDRESS=
 REACT_APP_RCN_TOKEN_CONTRACT_ADDRESS=
 REACT_APP_KYBER_ORACLE_CONTRACT_ADDRESS=
-REACT_APP_ESTATE_REGISTRY_CONTRACT_ADDRESS=
+
+# Third party
 
 REACT_APP_ROLLBAR_ACCESS_TOKEN=
 REACT_APP_INTERCOM_APP_ID=
 REACT_APP_SEGMENT_API_KEY=
 
-REACT_APP_FF_AUCTION=
+# Feature Flags
+
 REACT_APP_FF_MORTGAGES=
 REACT_APP_FF_BUY_MANA=
-
-REACT_APP_BLACKLISTED_ADDRESSES=
-
-REACT_APP_MORTGAGES_API=
+REACT_APP_FF_LAND_AUCTION=
