--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -13,7 +13,7 @@ REACT_APP_BLACKLISTED_ADDRESSES=
 
 REACT_APP_FF_MORTGAGES=
 REACT_APP_FF_BUY_MANA=
-REACT_APP_FF_LAND_AUCTION=
+REACT_APP_FF_AUCTION=
 
 # Third party
 
