feat: new sell phase. Auction PR: 1st (#625)
* feat: use a feature flag + show the first version

* feat: add LANDAuction contract mock

* feat: authorize LANDAuction

* feat: avoid breaking the monitor for now

* feat: feedback

* fix: translate script bug

* feat: feedback 2

* feat: rebase

* fix: translations and undefined func

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,20 +1,27 @@
 NODE_ENV=
 
+RPC_URL=
 SERVER_PORT=
-TRANSLATIONS_PATH=
-
 CONNECTION_STRING=
-
+TRANSLATIONS_PATH=
 PROCESS_EVENTS_DELAY=
 
-RPC_URL=
+# Third party
 
 NEW_RELIC_LICENSE_KEY=
 
-LAND_REGISTRY_CONTRACT_ADDRESS=
+# Contract addresses
+
+MANA_TOKEN_CONTRACT_ADDRESS=
+
 LEGACY_MARKETPLACE_CONTRACT_ADDRESS=
+LAND_REGISTRY_CONTRACT_ADDRESS=
+
+ESTATE_REGISTRY_CONTRACT_ADDRESS=
 MARKETPLACE_CONTRACT_ADDRESS=
+
+LAND_AUCTION_CONTRACT_ADDRESS=
+
 MORTGAGE_HELPER_CONTRACT_ADDRESS=
 MORTGAGE_MANAGER_CONTRACT_ADDRESS=
 RCN_ENGINE_CONTRACT_ADDRESS=
-ESTATE_REGISTRY_CONTRACT_ADDRESS=
