feat: added more tokens

--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -24,6 +24,13 @@ REACT_APP_SEGMENT_API_KEY=
 # Contract addresses
 
 REACT_APP_MANA_TOKEN_CONTRACT_ADDRESS=
+REACT_APP_ZIL_TOKEN_CONTRACT_ADDRESS=
+REACT_APP_DAI_TOKEN_CONTRACT_ADDRESS=
+REACT_APP_KNC_TOKEN_CONTRACT_ADDRESS=
+REACT_APP_SNT_TOKEN_CONTRACT_ADDRESS=
+REACT_APP_BNB_TOKEN_CONTRACT_ADDRESS=
+REACT_APP_MKR_TOKEN_CONTRACT_ADDRESS=
+REACT_APP_ELF_TOKEN_CONTRACT_ADDRESS=
 
 REACT_APP_LEGACY_MARKETPLACE_CONTRACT_ADDRESS=
 REACT_APP_MARKETPLACE_CONTRACT_ADDRESS=
