feat: add decentraland invitation monitor

--- a/src/.env.example
+++ b/src/.env.example
@@ -25,3 +25,4 @@ LAND_AUCTION_CONTRACT_ADDRESS=
 MORTGAGE_HELPER_CONTRACT_ADDRESS=
 MORTGAGE_MANAGER_CONTRACT_ADDRESS=
 RCN_ENGINE_CONTRACT_ADDRESS=
+DECENTRALAND_INVITE_CONTRACT_ADDRESS=
