feat: add env for acution startime

--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -45,3 +45,7 @@ REACT_APP_MORTGAGE_MANAGER_CONTRACT_ADDRESS=
 REACT_APP_RCN_ENGINE_CONTRACT_ADDRESS=
 REACT_APP_RCN_TOKEN_CONTRACT_ADDRESS=
 REACT_APP_KYBER_ORACLE_CONTRACT_ADDRESS=
+
+# Featre vars
+REACT_APP_AUCTION_START_TIME=
+
