--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -46,6 +46,7 @@ REACT_APP_RCN_ENGINE_CONTRACT_ADDRESS=
 REACT_APP_RCN_TOKEN_CONTRACT_ADDRESS=
 REACT_APP_KYBER_ORACLE_CONTRACT_ADDRESS=
 
-# Featre vars
+# Feature vars
+
 REACT_APP_AUCTION_START_TIME=
 
