fix: make metamask happy

--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -49,4 +49,5 @@ REACT_APP_KYBER_ORACLE_CONTRACT_ADDRESS=
 # Feature vars
 
 REACT_APP_AUCTION_START_TIME=
-
+REACT_APP_AUCTION_GAS_PRICE_LIMIT=
+REACT_APP_AUCTION_LANDS_LIMIT_PER_BID=
