chore: added auction price env vars

--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -51,3 +51,9 @@ REACT_APP_KYBER_ORACLE_CONTRACT_ADDRESS=
 REACT_APP_AUCTION_START_TIME=
 REACT_APP_AUCTION_GAS_PRICE_LIMIT=
 REACT_APP_AUCTION_LANDS_LIMIT_PER_BID=
+REACT_APP_AUCTION_START_TIME=
+REACT_APP_AUCTION_INITIAL_PRICE=
+REACT_APP_AUCTION_SECOND_PRICE=
+REACT_APP_AUCTION_THIRD_PRICE=
+REACT_APP_AUCTION_FOURTH_PRICE=
+REACT_APP_AUCTION_END_PRICE=
