feat: kyber reserves check

--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -57,3 +57,12 @@ REACT_APP_AUCTION_SECOND_PRICE=
 REACT_APP_AUCTION_THIRD_PRICE=
 REACT_APP_AUCTION_FOURTH_PRICE=
 REACT_APP_AUCTION_END_PRICE=
+REACT_APP_AUCTION_CONVERSION_FEE=
+REACT_APP_BNB_MAX_CONVERSION_AMOUNT=
+REACT_APP_DAI_MAX_CONVERSION_AMOUNT=
+REACT_APP_ELF_MAX_CONVERSION_AMOUNT=
+REACT_APP_KNC_MAX_CONVERSION_AMOUNT=
+REACT_APP_MKR_MAX_CONVERSION_AMOUNT=
+REACT_APP_SNT_MAX_CONVERSION_AMOUNT=
+REACT_APP_ZIL_MAX_CONVERSION_AMOUNT=
+REACT_APP_RCN_MAX_CONVERSION_AMOUNT=
