--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -20,6 +20,7 @@ REACT_APP_FF_AUCTION=
 REACT_APP_ROLLBAR_ACCESS_TOKEN=
 REACT_APP_INTERCOM_APP_ID=
 REACT_APP_SEGMENT_API_KEY=
+REACT_APP_ETHERSCAN_API_KEY=
 
 # Contract addresses
 
