feat: finish auction

--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -52,6 +52,7 @@ REACT_APP_KYBER_ORACLE_CONTRACT_ADDRESS=
 REACT_APP_AUCTION_START_TIME=
 REACT_APP_AUCTION_GAS_PRICE_LIMIT=
 REACT_APP_AUCTION_LANDS_LIMIT_PER_BID=
+REACT_APP_AUCTION_REAL_DURATION_IN_DAYS=
 REACT_APP_AUCTION_START_TIME=
 REACT_APP_AUCTION_INITIAL_PRICE=
 REACT_APP_AUCTION_SECOND_PRICE=
