--- a/webapp/package.json
+++ b/webapp/package.json
@@ -93,7 +93,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "source-map-explorer": "^1.5.0"
+    "webpack-bundle-analyzer": "^3.0.3"
   },
   "jest": {
     "collectCoverageFrom": [
