feat: wait some time between new tiles requests

--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -11,7 +11,6 @@ REACT_APP_BLACKLISTED_ADDRESSES=
 
 # Feature Flags
 
-REACT_APP_FF_MORTGAGES=
 REACT_APP_FF_BUY_MANA=
 REACT_APP_FF_AUCTION=
 
@@ -47,13 +46,18 @@ REACT_APP_RCN_ENGINE_CONTRACT_ADDRESS=
 REACT_APP_RCN_TOKEN_CONTRACT_ADDRESS=
 REACT_APP_KYBER_ORACLE_CONTRACT_ADDRESS=
 
-# Feature vars
+## Feature vars
+
+# Tiles
+
+WAIT_TIME_BETWEE_NEW_TILES_REQUEST=
+
+# Auction
 
 REACT_APP_AUCTION_START_TIME=
 REACT_APP_AUCTION_GAS_PRICE_LIMIT=
 REACT_APP_AUCTION_LANDS_LIMIT_PER_BID=
 REACT_APP_AUCTION_REAL_DURATION_IN_DAYS=
-REACT_APP_AUCTION_START_TIME=
 REACT_APP_AUCTION_INITIAL_PRICE=
 REACT_APP_AUCTION_SECOND_PRICE=
 REACT_APP_AUCTION_THIRD_PRICE=
