--- a/src/.env.example
+++ b/src/.env.example
@@ -29,3 +29,5 @@ MORTGAGE_HELPER_CONTRACT_ADDRESS=
 MORTGAGE_MANAGER_CONTRACT_ADDRESS=
 RCN_ENGINE_CONTRACT_ADDRESS=
 DECENTRALAND_INVITE_CONTRACT_ADDRESS=
+
+BID_CONTRACT_ADDRESS=
