refacto: shared publication to listing

--- a/src/.env.example
+++ b/src/.env.example
@@ -30,4 +30,4 @@ MORTGAGE_MANAGER_CONTRACT_ADDRESS=
 RCN_ENGINE_CONTRACT_ADDRESS=
 DECENTRALAND_INVITE_CONTRACT_ADDRESS=
 
-BID_CONTRACT_ADDRESS=
+ERC721_BID_CONTRACT_ADDRESS=
