--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "lint": "./node_modules/eslint/bin/eslint.js .",
     "lint:fix": "./node_modules/eslint/bin/eslint.js --fix .",
-    "test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/**/*.spec.js shared/**/*.spec.js",
-    "watch:test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
+    "test":
+      "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/**/*.spec.js src/**/**/*.spec.js shared/**/*.spec.js",
+    "watch:test":
+      "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
     "init-db": "./scripts/initDb.js",
     "migrate": "./migrations/migrate",
     "renew-blockchain-data": "./scripts/renewBlockchainData.js",
     "seed": "./scripts/seed.js",
-    "translate": "./scripts/translate.js && prettier ./src/Translation/locales/*.json --write",
+    "translate":
+      "./scripts/translate.js && prettier ./src/Translation/locales/*.json --write",
     "tag": "./scripts/tag.js",
     "monitor-blockchain": "./monitor/program.js index",
     "sanity-check": "./sanity/program.js run",
@@ -26,11 +29,7 @@
     "type": "git",
     "url": "https://github.com/decentraland/marketplace.git"
   },
-  "keywords": [
-    "decentraland",
-    "marketplace",
-    "dapp"
-  ],
+  "keywords": ["decentraland", "marketplace", "dapp"],
   "author": "Decentraland",
   "license": "ISC",
   "dependencies": {
