--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -72,3 +72,8 @@ REACT_APP_MKR_MAX_CONVERSION_AMOUNT=
 REACT_APP_SNT_MAX_CONVERSION_AMOUNT=
 REACT_APP_ZIL_MAX_CONVERSION_AMOUNT=
 REACT_APP_RCN_MAX_CONVERSION_AMOUNT=
+
+# Redux
+
+REACT_APP_REDUX_ACTION_ONLY_TYPE=
+REACT_APP_REDUX_STORE_KEYS=
