feat: sanitize actions and state based on .env (#835)
New webapp envs

```
# Redux

REACT_APP_REDUX_ACTION_ONLY_TYPE=
REACT_APP_REDUX_STORE_KEYS=
```

You can set something like:

```
REACT_APP_REDUX_ACTION_ONLY_TYPE=1
REACT_APP_REDUX_STORE_KEYS=parcels,address
```

And see only: 

<img width="516" alt="screen shot 2019-01-29 at 18 08 37" src="https://user-images.githubusercontent.com/7549152/51940577-2f599000-23f1-11e9-9ba4-3267fe58b656.png">
<img width="515" alt="screen shot 2019-01-29 at 18 08 41" src="https://user-images.githubusercontent.com/7549152/51940578-2f599000-23f1-11e9-96a6-33cddd5fd604.png">

--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -72,3 +72,8 @@ REACT_APP_MKR_MAX_CONVERSION_AMOUNT=
 REACT_APP_SNT_MAX_CONVERSION_AMOUNT=
 REACT_APP_ZIL_MAX_CONVERSION_AMOUNT=
 REACT_APP_RCN_MAX_CONVERSION_AMOUNT=
+
+# Redux
+
+REACT_APP_DEVTOOLS_EXTENSION_ACTION_ONLY_SHOW_TYPE
+REACT_APP_DEVTOOLS_EXTENSION_STORE_KEYS
