--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chai-as-promised": "^7.1.1",
     "decentraland-commons": "^4.0.1",
     "decentraland-eth": "^8.10.0",
+    "dotenv": "^6.0.0",
     "eslint": "4.10.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-prettier": "^2.3.1",
