--- a/src/.env.example
+++ b/src/.env.example
@@ -7,7 +7,7 @@ CONNECTION_STRING=
 TRANSLATIONS_PATH=
 PROCESS_EVENTS_DELAY=
 CACHE_TILES=
-UPDATE_CACHE=
+SKIP_TILES_CACHE_UPDATE=
 BLOCK_STEP=
 
 AUCTION_PARCEL_COUNT=
