Feat: sanity divide by blocks (#881)
Get blockchain events by blocks and batch every process inside the sanity execution

### New env
```
WEB_SOCKET_RPC_URL=
BLOCK_STEP=
SKIP_TILES_CACHE_UPDATE=
```

### Run 
`npm run migrate up`
```CONNECTION_STRING="postgres://marketplace@localhost:5432/marketplace_sanity" SKIP_TILES_CACHE_UPDATE=1
npm run sanity-check -- --self-heal --from-block 4000000 --websocket   ```

### Next steps:

- Refactor how we are treating faulty assets, try to not re-treat the same asset.
- Remove `parcels` from `Estate.data`.
- Remove `blockchain_events` from a block.
- Add flag to `blockchain_events` to not re-run events.

--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "lint": "./node_modules/eslint/bin/eslint.js .",
     "lint:fix": "./node_modules/eslint/bin/eslint.js --fix .",
-    "test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/**/*.spec.js src/**/**/*.spec.js shared/**/*.spec.js",
-    "watch:test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
+    "test":
+      "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/**/*.spec.js src/**/**/*.spec.js shared/**/*.spec.js",
+    "watch:test":
+      "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
     "init-db": "./scripts/initDb.js",
     "migrate": "./migrations/migrate",
     "renew-blockchain-data": "./scripts/renewBlockchainData.js",
     "seed": "./scripts/seed.js",
-    "translate": "./scripts/translate.js && prettier ./src/Translation/locales/*.json --write",
+    "translate":
+      "./scripts/translate.js && prettier ./src/Translation/locales/*.json --write",
     "tag": "./scripts/tag.js",
     "monitor-blockchain": "./monitor/program.js index",
     "sanity-check": "./sanity/program.js run",
@@ -26,11 +29,7 @@
     "type": "git",
     "url": "https://github.com/decentraland/marketplace.git"
   },
-  "keywords": [
-    "decentraland",
-    "marketplace",
-    "dapp"
-  ],
+  "keywords": ["decentraland", "marketplace", "dapp"],
   "author": "Decentraland",
   "license": "ISC",
   "dependencies": {
@@ -53,6 +52,7 @@
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.5.1",
+    "eth-connect": "^4.0.1",
     "ethereumjs-abi": "^0.6.5",
     "express": "^4.16.2",
     "faker": "^4.1.0",
@@ -63,7 +63,8 @@
     "node-pg-migrate": "^2.23.0",
     "prettier": "1.12.1",
     "sinon": "^5.0.3",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "websocket": "^1.0.28"
   },
   "devDependencies": {
     "nodemon": "^1.14.11",
