--- a/src/.env.example
+++ b/src/.env.example
@@ -1,11 +1,14 @@
 NODE_ENV=
 
 RPC_URL=
+WEB_SOCKET_RPC_URL=
 SERVER_PORT=
 CONNECTION_STRING=
 TRANSLATIONS_PATH=
 PROCESS_EVENTS_DELAY=
 CACHE_TILES=
+SKIP_TILES_CACHE_UPDATE=
+BLOCK_STEP=
 
 AUCTION_PARCEL_COUNT=
 
