--- a/src/.env.example
+++ b/src/.env.example
@@ -3,6 +3,8 @@ NODE_ENV=
 RPC_URL=
 WEB_SOCKET_RPC_URL=
 SERVER_PORT=
+CORS_ORIGIN=
+CORS_METHOD=
 CONNECTION_STRING=
 TRANSLATIONS_PATH=
 PROCESS_EVENTS_DELAY=
