--- a/src/.env.example
+++ b/src/.env.example
@@ -2,11 +2,15 @@ NODE_ENV=
 
 RPC_URL=
 WEB_SOCKET_RPC_URL=
+
 SERVER_PORT=
 CORS_ORIGIN=
 CORS_METHOD=
+DATABASE_RECONNECTION_TIMEOUT=
 CONNECTION_STRING=
+
 TRANSLATIONS_PATH=
+
 PROCESS_EVENTS_DELAY=
 CACHE_TILES=
 SKIP_TILES_CACHE_UPDATE=
