--- a/package.json
+++ b/package.json
@@ -6,17 +6,14 @@
   "scripts": {
     "lint": "./node_modules/eslint/bin/eslint.js .",
     "lint:fix": "./node_modules/eslint/bin/eslint.js --fix .",
-    "test":
-      "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/**/*.spec.js src/**/**/*.spec.js shared/**/*.spec.js",
-    "watch:test":
-      "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
+    "test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/**/*.spec.js src/**/**/*.spec.js shared/**/*.spec.js",
+    "watch:test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
     "init-db": "./scripts/initDb.js",
     "restore-dump": "./scripts/restoreDump.js",
     "migrate": "./migrations/migrate",
     "renew-blockchain-data": "./scripts/renewBlockchainData.js",
     "seed": "./scripts/seed.js",
-    "translate":
-      "./scripts/translate.js && prettier ./src/Translation/locales/*.json --write",
+    "translate": "./scripts/translate.js && prettier ./src/Translation/locales/*.json --write",
     "tag": "./scripts/tag.js",
     "monitor-blockchain": "./monitor/program.js index",
     "sanity-check": "./sanity/program.js run",
@@ -30,7 +27,11 @@
     "type": "git",
     "url": "https://github.com/decentraland/marketplace.git"
   },
-  "keywords": ["decentraland", "marketplace", "dapp"],
+  "keywords": [
+    "decentraland",
+    "marketplace",
+    "dapp"
+  ],
   "author": "Decentraland",
   "license": "ISC",
   "dependencies": {
@@ -47,8 +48,9 @@
     "canvas": "^2.0.0-alpha.12",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "decentraland-commons": "^4.0.1",
+    "decentraland-commons": "^5.1.0",
     "decentraland-eth": "^8.10.0",
+    "decentraland-server": "^2.0.1",
     "eslint": "4.10.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-prettier": "^2.3.1",
