--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -21,6 +21,7 @@ REACT_APP_ROLLBAR_ACCESS_TOKEN=
 REACT_APP_INTERCOM_APP_ID=
 REACT_APP_SEGMENT_API_KEY=
 REACT_APP_ETHERSCAN_API_KEY=
+REACT_APP_BUY_MANA_URL=
 
 # Contract addresses
 
