--- a/src/.env.example
+++ b/src/.env.example
@@ -2,8 +2,8 @@ NODE_ENV=
 
 RPC_URL=
 WEB_SOCKET_RPC_URL=
-HWALLET_MNEMONIC=
-HWALLET_INDEX=
+HDWALLET_MNEMONIC=
+HDWALLET_INDEX=
 
 SERVER_PORT=
 CORS_ORIGIN=
