--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "node-pg-migrate": "^2.23.0",
     "prettier": "1.12.1",
     "sinon": "^5.0.3",
+    "truffle-hdwallet-provider": "^1.0.16",
     "uuid": "^3.1.0",
     "websocket": "^1.0.28"
   },
