--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
             - frontend-dependencies-{{ checksum "webapp/package-lock.json" }}
       - run:
           name: (frontend) Install packages
-          command: cd webapp && npm install
+          command: cd webapp && npm i
       - save_cache:
           paths:
             - node_modules
